@@ -1,6 +1,8 @@
 Revision history for Net-Silverpeak-Orchestrator
 
 {{ $NEXT }}
+    - add support for user/password login when Enforce CSRF Token Check is
+      enabled
 
 0.005000  2022-01-17 15:31:52+01:00 Europe/Vienna
     - fix list_application_groups ok when nested application groups exist
